--- a/index.html
+++ b/index.html
@@ -67,5 +67,31 @@
             </div>    
         </div>    
     </div>
+    <div class="quote-section">
+        <div class="quote">
+            <div class = "quote-text">    
+            This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows?
+            All I know is that it looks nice.
+            </div>
+            <div class ="quote-author">
+            - Thor, God of Thunder    
+            </div>    
+        </div>    
+    </div>
+    <div class="call-to-action">
+        <div class="action-box">
+            <div class="action-text">
+                <div class="action-main-text">
+                Call to action! It's time!
+                </div>
+                <div class="action-sub-text">
+                Sign up for our product by clicking that button right over there!
+                </div>
+            </div>
+            <button class ="action-signup">
+            Sign Up    
+            </button>
+        </div>
+    </div>
 </body>
 </html>
