--- a/index.html
+++ b/index.html
@@ -93,5 +93,8 @@
             </button>
         </div>
     </div>
+    <div class="footer">
+        Copyright © The Odin Project 2022
+    </div>
 </body>
 </html>
