--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     </div>
     <div class="random-information">
         <h1>
-        Some Random Information
+        Some random information.
         </h1>
         <div class="box-container">
             <div class="info">
